
Regina - A Normal Surface Theory Calculator

    This file gives a detailed list of changes between releases,
    including all changes to the C++/Python API.

    For just the key highlights, see the (far more readable) file
    HIGHLIGHTS.txt.

Version 7.2  [ (to be determined) ]

    ENGINE:
        Class HyperEncoding:
            - New static function empty().
        Class ListView<...>:
            - Added equality operators (== and !=).
            - Added a specialisation for fixed-size C-style arrays:
              ListView<Element[n]>.
        Class ModelLinkGraph:
            - Routine flype() now throws an exception if the given arcs
              are not laid out on the plane in the expected manner.
            - Routine generateMinimalLinks() now throws an exception if its
              precondition is not met.
            - Routines plantri(), canonicalPlantri() and fromPlantri() can
              now work with graphs with up to 52 nodes (instead of 26).
              Beyond 26 nodes, Regina's format differs from plantri's own.
            - Routines plantri() and canonicalPlantri() now throw an
              exception if the graph has more than 52 nodes.
            - Routine fromPlantri() has dropped the precondition on the size
              of the graph, since this is explicitly checked.
        Class NormalEncoding:
            - New static function empty().
        Class NormalHypersurface:
            - New constructor to build the empty surface.
        Class NormalSurface:
            - New constructor to build the empty surface.
        Class TableView:
            - New class to help wrap read-only multi-dimensional arrays.
        Function buildInfo():
            - New function that allows packagers to embed additional
              version/build-related information in the calculation engine.
    PYTHON:
        - Updated the included pybind11 library from 2.8.1 to 2.10.0.