@@ -525,7 +525,7 @@ Triangulation<3> Example<3>::trefoil() {
     return ans;
 }
 
-Triangulation<3> Example<3>::whiteheadLink() {
+Triangulation<3> Example<3>::whitehead() {
     return Triangulation<3>::fromGluings(4, {
         { 0, 0, 3, {2,3,1,0} }, { 0, 1, 2, {3,2,0,1} }, { 0, 2, 1, {0,1,3,2} },
         { 0, 3, 3, {3,2,0,1} }, { 1, 0, 3, {3,2,0,1} }, { 1, 1, 2, {2,3,1,0} },
